feat: added get estate drone plan api def + removed unused codes & comments
